k8s_config/overlays/production/backend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - api.bitpull.io
      secretName: letsencrypt
  rules:
    - host: api.bitpull.io
      http:
        paths:
          - path: /*
            backend:
              serviceName: backend
              servicePort: http
          - path: /
            backend:
              serviceName: backend
              servicePort: http
